--- a/style/style.css
+++ b/style/style.css
@@ -439,7 +439,7 @@ main .banner .btn {
     main .banner .title {
         font-size: 36px;
         margin-bottom: 0px;
-        text-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+        /* text-shadow: 0 0 20px rgba(0, 0, 0, 0.3); */
         text-align: center;
     }
 
@@ -477,7 +477,7 @@ main .banner .btn {
 
     main .banner .title {
         font-size: 45px;
-        text-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+        /* text-shadow: 0 0 20px rgba(0, 0, 0, 0.3); */
     }
 
     main .banner .subtitle {
