--- a/style/style.css
+++ b/style/style.css
@@ -441,7 +441,10 @@ main .banner .btn {
         margin-bottom: 0px;
         /* text-shadow: 0 0 20px rgba(0, 0, 0, 0.3); */
         text-align: center;
-        color: #fff;
+        background-color: #00000024;
+        backdrop-filter: blur(5px);
+        padding: 10px 10px;
+        border-radius: 5px;
     }
 
     main .banner .subtitle {
