--- a/style/style.css
+++ b/style/style.css
@@ -439,12 +439,9 @@ main .banner .btn {
     main .banner .title {
         font-size: 36px;
         margin-bottom: 0px;
-        /* text-shadow: 0 0 20px rgba(0, 0, 0, 0.3); */
+        text-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
         text-align: center;
-        background-color: #00000024;
-        backdrop-filter: blur(5px);
-        padding: 10px 10px;
-        border-radius: 5px;
+        color: #fff;
     }
 
     main .banner .subtitle {
