--- a/style/style.css
+++ b/style/style.css
@@ -572,6 +572,10 @@ main .banner .btn {
         align-items: center;
         flex-direction: column;
     }
+
+    .hero-info .hero-info-container .item .item-content .item-info {
+        padding: 5px 10px;
+    }
 }
 
 
